syntax = "proto3";

package nft;
option go_package = "./nft";



message Response{
  string message = 2;
}


service NftBase {
  rpc GetMessageByAddressOrHash (GetMessageByAddressOrHashRequest) returns (GetMessageByAddressOrHashDTO) {}
  rpc CreateActivity (CreateActivityRequest) returns (Response) {}
  rpc PrizeDcFromActivity (GetDcFromActivityRequest) returns (Response) {}
  rpc GetActivityPages (PageRequest) returns (ActivityPageVOList) {}
  rpc GetDcPages (PageRequest) returns (DcPageVOList) {}
  rpc GetPoolPages (PageRequest) returns (PoolPageVOList) {}
  rpc GetOneActivity (GetOneActivityRequest) returns (ActivityDetailsVO) {}
  rpc SearchActivities (SearchActivitiesRequest) returns (ActivityPageVOList) {}
  rpc GiveDc (GiveDcRequest) returns (Response) {}
  rpc SelectDc (SelectDcRequest) returns (DcPageVOList) {}
  rpc GetDcById (GetDcByIdRequest) returns (DcDetailVO) {}
  rpc GetMyDc (Empty) returns (DcPageVOList) {}
  rpc GetDcHistory (GetDcHistoryRequest) returns (CollectionMessageOnChainVO) {}
  rpc CreatePool (CreatePoolRequest) returns (Response) {}
  rpc BuyFromPool (BuyFromPoolRequest) returns (Response) {}
  rpc SelectPool (SelectPoolRequest) returns (PoolPageVOList) {}
  rpc GetPoolById (GetPoolByIdRequest) returns (PoolDetailsVO) {}
  rpc GetMyPool (Empty) returns (PoolPageVOList) {}
}

service NftAuction{

}

message Empty {
}
message PageRequest {
  int32 page = 1;
  int32 size = 2;
}
message GetMessageByAddressOrHashRequest {
  string hash = 1;
}

message GetMessageByAddressOrHashDTO {
  int32 type = 1;
  AccountMessageVO accountMessageVO = 2;
  CollectionMessageOnChainVO collectionMessageOnChainVO = 3;
}
message AccountMessageVO {
  string hash = 1;
  string registerTime = 2;
  repeated DcOverviewVO ownedCollections = 3;
}
message DcOverviewVO {
  int32 id = 1;
  string hash = 2;
  string getTime = 3;
}

message CreateActivityRequest {
  string name = 1;
  string description = 2;
  string password = 3;
  int32 amount = 4;
  string dcName = 5;
  string dcDescription = 6;
  string cid = 7;
}


message GetDcFromActivityRequest {
  int32 id = 1;
  string password = 2;
}


message GetOneActivityRequest {
  int32 id = 1;
}

message SearchActivitiesRequest {
  string hostName = 1;
  string activityName = 2;
}


message ActivityPageVOList {
  repeated ActivityPageVO activityPageVO = 1;
  int32 total = 2;
}

message ActivityPageVO {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string url = 4;
  string hostName = 5;
  string hostAddress = 6;
  int32 amount = 7;
  int32 left = 8;
}


message ActivityDetailsVO {
  int32 id = 1;
  string activityName = 2;
  string activityDescription = 3;
  string dcName = 4;
  string dcDescription = 5;
  string url = 6;
  string hostName = 7;
  string hostAddress = 8;
  int32 amount = 9;
  int32 left = 10;
  string contractAddress = 11;
}
message GiveDcRequest {
  string toName = 1;
  string toAddress = 2;
  int32 dcId = 3;
}


message SelectDcRequest {
  string name = 1;
}

message GetDcByIdRequest {
  int32 id = 1;
}

message GetDcHistoryRequest {
  int32 id = 1;
}

message DcPageVOList {
  repeated DcPageVO dcPageVO = 1;
  int32 total = 2;
}
message DcPageVO {
  string url = 1;
  string name = 2;
  int32 dcId = 3;
  string hash = 4;
  string creatorName = 5;
  int32 price = 6;
}

message DcDetailVO {
  int32 dcId = 1;
  string hash = 2;
  string url = 3;
  string name = 4;
  string description = 5;
  int32 price = 6;
  string creatorName = 7;
  string creatorAddress = 8;
  string ownerName = 9;
  string ownerAddress = 10;
  string contractAddress = 11;
}

message CollectionMessageOnChainVO {
  string name = 1;
  string hash = 2;
  string description = 3;
  string creatorAddress = 4;
  string ownerAddress = 5;
  repeated TraceBackVO traceBackVOList = 6;
}

message TraceBackVO {
  string fromAddress = 1;
  string toAddress = 2;
  string transferType = 3;
  string transferTime = 4;
}


message CreatePoolRequest {
  string name = 1;
  string description = 2;
  bool status = 3;
  int32 price = 4;
  int32 amount = 5;
  int32 limitAmount = 6;
  string cid = 7;
  string creator = 8;
}

message BuyFromPoolRequest {
  int32 poolId = 1;
}

message SelectPoolRequest {
  string name = 1;
  string creatorName = 2;
  int32 minPrice = 3;
  int32 maxPrice = 4;
}


message GetPoolByIdRequest {
  int32 id = 1;
}

message PoolPageVOList {
  repeated PoolPageVO poolPageVO = 1;
  int32 total = 2;
}
message PoolPageVO {
  int32 poolId = 1;
  string name = 2;
  string description = 3;
  string url = 4;
  string creatorName = 5;
  bool status = 6;
  bool soldOut = 7;
  int32 price = 8;
}

message PoolDetailsVO {
  int32 poolId = 1;
  string name = 2;
  string description = 3;
  string url = 4;
  int32 price = 5;
  int32 amount = 6;
  int32 left = 7;
  string creatorName = 8;
  string creatorAddress = 9;
  string contractAddress = 10;
}


