syntax = "proto3";

package user;
option go_package = "./user";

service User {
  rpc register(RegisterRequest) returns (Response);
  rpc login(LoginRequest) returns (Response);
  rpc logout(Empty) returns (Response);
  rpc refreshTokens(Empty) returns (Response);
  rpc upload(stream UploadRequest) returns (Response);
  rpc saveNotice(Notice) returns (Response);
  rpc getAllNotices(Empty) returns (NoticeList);
  rpc getNoticeByTitle(TitleNoticeRequest) returns (NoticeList);
  rpc getNoticeById(IdNoticeRequest) returns (Notice);
  rpc getUserInfoByName(UserNameRequest) returns (UserInfo);
  rpc getDayRankingList(Empty) returns (RankingList);
  rpc getWeekRankingList(Empty) returns (RankingList);
  rpc getMonthRankingList(Empty) returns (RankingList);
}

message Empty {}

message RankingList {
  repeated Ranking rankings = 1;
}
message Ranking{
  string title = 1;
  int32 score = 2;
}


message UserNameRequest {
  string username = 1;
}

message UserInfo {
  string username = 1;
  string address = 2;
}

message Notice {
  string title = 1;
  string description = 2;
  string publishTime = 3;
  string userAddress = 4;
  int32 id = 5;
  int32 Type = 6;
}

message NoticeList {
  repeated Notice notices = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest{
  string username = 1;
  string password = 2;
  string email = 3;
  string avatar = 4;
}

message UploadRequest {
  bytes data = 1;
}

message TitleNoticeRequest {
  string title = 1;
}

message IdNoticeRequest {
  int32 id = 1;
}


message Response {
  string message = 1;
  uint32 code = 2;
  string data = 3;
}
